# docs/swagger.yaml
@@ -60,6 +60,17 @@ definitions:
       lastPage:
         type: integer
     type: object
+  api.treeItem:
+    properties:
+      name:
+        type: string
+      path:
+        type: string
+      sha:
+        type: string
+      type:
+        type: string
+    type: object
 info:
   contact: {}
   description: '### Git-based headless CMS API.'
@@ -69,6 +80,133 @@ info:
   title: Moonbase API
   version: "1.0"
 paths:
+  /cms/{owner}/{repo}/{ref}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: the account owner of the repository (the name is not case sensitive)
+        in: path
+        name: owner
+        required: true
+        type: string
+      - description: the name of the repository (the name is not case sensitive)
+        in: path
+        name: repo
+        required: true
+        type: string
+      - description: git ref (branch, tag, sha)
+        in: path
+        name: ref
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/api.treeItem'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.errorData'
+      security:
+      - bearerToken: []
+      summary: Get collections
+      tags:
+      - cms
+  /cms/{owner}/{repo}/{ref}/{collection}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: the account owner of the repository (the name is not case sensitive)
+        in: path
+        name: owner
+        required: true
+        type: string
+      - description: the name of the repository (the name is not case sensitive)
+        in: path
+        name: repo
+        required: true
+        type: string
+      - description: git ref (branch, tag, sha)
+        in: path
+        name: ref
+        required: true
+        type: string
+      - description: collection
+        in: path
+        name: collection
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/api.treeItem'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.errorData'
+      security:
+      - bearerToken: []
+      summary: Get documents
+      tags:
+      - cms
+  /cms/{owner}/{repo}/{ref}/{collection}/{document}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: the account owner of the repository (the name is not case sensitive)
+        in: path
+        name: owner
+        required: true
+        type: string
+      - description: the name of the repository (the name is not case sensitive)
+        in: path
+        name: repo
+        required: true
+        type: string
+      - description: git ref (branch, tag, sha)
+        in: path
+        name: ref
+        required: true
+        type: string
+      - description: collection
+        in: path
+        name: collection
+        required: true
+        type: string
+      - description: document
+        in: path
+        name: document
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.blobEntry'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.errorData'
+      security:
+      - bearerToken: []
+      summary: Get document
+      tags:
+      - cms
   /repos:
     get:
       consumes:
